<resources>
    <string name="app_name">HW5-Hangman</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_game">Hangman</string>
    <string name="no_internet">You need internet access</string>
    <string name="no_connection">No connection</string>
    <string name="no_gameserver">Unable to connect to the game server</string>
    <string name="yes_gameserver">Now connected</string>
    <string name="dialog_connect_title">Server status</string>
    <string name="connecting">Connecting to server</string>
    <string name="lost_connection">Lost connection to the game server</string>
    <string name="guess_btn">guess</string>
    <string name="new_game_btn">new game</string>
    <string name="status_text">This is where the server puts the game state</string>
    <string name="wins_text">Total wins</string>
    <string name="totalWins_text">0</string>
    <string name="triesLeft_text">0</string>
    <string name="tries_text">Guesses left</string>
    <string name="guessField_text">enter guess here</string>
    <string name="menu_game_btn">new game</string>
    <string name="menu_instruction_btn">instructions</string>
    <string name="menu_settings_btn">settings</string>
    <string name="menu_rules_btn">rules</string>
</resources>



